# alohomora

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  dev.ps1  dev.sh  install.ps1  mobile.toml  tauri.conf.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
browser-extension/: README.md  background.js  connect-to-tauri.sh  content.js  install-native-host.bat  install-native-host.sh  manifest.json  native-host.json  popup.html  popup.js  test-extension.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BrowserAutocomplete.tsx  BrowserAutofill.tsx  ExampleI18n.tsx  LanguageSelector.tsx  Layout.tsx  RecoveryModal.tsx  SyncStatusIndicator.tsx
frontend/src/hooks/: useGlobalShortcut.ts  useI18n.ts
frontend/src/i18n/: index.ts
frontend/src/locales/: en.json  es.json
frontend/src/pages/: DashboardPage.tsx  GeneratorPage.tsx  LoginPage.tsx  PasswordsPage.tsx  SettingsPage.tsx  SyncPage.tsx
frontend/src/stores/: authStore.ts  autocompleteStore.ts  passwordStore.ts  recoveryStore.ts  syncStore.ts
src/: App.tsx  main.rs  main.tsx
src/browser_extension/: mod.rs  native_messaging.rs  protocol.rs
src/components/: Layout.tsx
src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src/database/: connection.rs  migrations.rs  mod.rs  repository.rs
src/models/: category.rs  mod.rs  password_entry.rs  user.rs
src/pages/: DashboardPage.tsx  LoginPage.tsx  SyncPage.tsx
src/stores/: authStore.ts
src/sync/: commands.rs  device_info.rs  discovery.rs  mod.rs  p2p_connection.rs  smart_sync.rs  sync_manager.rs
