[package]
name = "alohopass"
version = "0.1.0"
edition = "2025"
authors = ["Charly <charly@alohopass.com>"]
description = "Un gestor de contraseñas seguro y moderno inspirado en el encantamiento Alohomora"
license = "MIT"
repository = "https://github.com/n3c4s/alohomora"
homepage = "https://alohopass.com"
keywords = ["password-manager", "security", "encryption", "tauri", "rust"]

[dependencies]
# Tauri
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Criptografía
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
hex = "0.4"

# Base de datos
rusqlite = { version = "0.29", features = ["bundled"] }

# Utilidades
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 