[package]
name = "alohopass"
version = "0.1.0"
edition = "2021"
authors = ["n3c4s <n3c4s@github.com>"]
description = "Un gestor de contraseñas seguro y moderno inspirado en el encantamiento Alohomora"
license = "MIT"
repository = "https://github.com/n3c4s/alohomora"
homepage = "https://alohopass.com"
keywords = ["password-manager", "security", "encryption", "tauri", "rust"]

[dependencies]
# Tauri
tauri = { version = "1.5", features = [ "window-all", "global-shortcut-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
dirs = "5.0"
rand = "0.8"

# P2P Sync Dependencies
tokio = { version = "1.0", features = ["full"] }
mdns-sd = "0.14"
webrtc = "0.12"
async-trait = "0.1"
futures = "0.3"
whoami = "1.4"
sha2 = "0.10"
bytes = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
